--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,8 +1,10 @@
 {{ define "main"}}
     <main id="main">
-      <div>
-       <h1 id="title">Not found</h1>
-          <p>Oops! This page doesn't exist. Try going back to our <a href="{{ "/" | relURL }}">home page</a>.</p>
+      <div class="td-content">
+       <h1 id="title">No encontrado en Adtopy | Error 404</h1>
+          <p>Opps! Lo sentimos. La sección que estabas intentando ver, ya no está disponible. Vuelve a la <a href="{{ "/" | relURL }}">página principal.</a></p>
+
+          <img src="/img/error-404.gif" alt="error 404" />            
       </div>
     </main>
 {{ end }}
