--- a/layouts/_default/content.html
+++ b/layouts/_default/content.html
@@ -1,4 +1,7 @@
-<div class="td-content">
+<div class="td-content">	
+
+	{{ partial "reading-time.html" . }}
+
 	<h1>{{ .Title }}</h1>
 	{{ with .Params.description }}<div class="lead">{{ . | markdownify }}</div>{{ end }}
 	{{ .Content }}
@@ -11,4 +14,6 @@
 		{{ partial "disqus-comment.html" . }}
 	{{ end }}
 	<div class="text-muted mt-5 pt-3 border-top">{{ partial "page-meta-lastmod.html" . }}</div>
+
+	{{ partial "pager-custom.html" . }}
 </div>
