Prism.JS for highlight in hugo & deleted all related to [markup.goldmark] o [highlight] in config.toml

--- a/layouts/partials/reading-time.html
+++ b/layouts/partials/reading-time.html
@@ -3,5 +3,4 @@
 {{ $minutes := math.Floor (div $readTime 60) }}
 {{ $seconds := mod $readTime 60 }}
 
-<p><i class="fa fa-clock" aria-hidden="true"></i><i> Tiempo lectura: 
-{{ $minutes }} {{ cond (eq $minutes 1) "min." "min." }} {{ $seconds }} {{ cond (eq $seconds 1) "s." "s." }}</i></p>
+<p class="reading-time"><i class="fa fa-clock" aria-hidden="true"></i> Tiempo lectura: {{ $minutes }} {{ cond (eq $minutes 1) "min." "min." }} {{ $seconds }} {{ cond (eq $seconds 1) "s." "s." }}</p>
