--- a/assets/scss/_code.scss
+++ b/assets/scss/_code.scss
@@ -1,5 +1,7 @@
 // Code formatting.
+// Comment all code CSS for avoiding these css class related to code variables
 
+/*
 .td-content {
 	// Highlighted code.
     .highlight {
@@ -52,3 +54,5 @@
         }
     }
 }
+
+*/
