--- a/assets/scss/_sidebar-toc.scss
+++ b/assets/scss/_sidebar-toc.scss
@@ -2,7 +2,7 @@
 // Right side toc
 //
 nav#TableOfContents ul li ul li  a {
-    list-style-type: inherit;
+    list-style-type: decimal;
     display: list-item;
     color: $green;
 }
