--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -26,6 +26,7 @@
 @import "blocks/blocks";
 @import "section-index";
 @import "pageinfo";
+@import "readingtime";
 
 @if $td-enable-google-fonts {
     @import url($web-font-path);
