--- a/layouts/partials/head-css.html
+++ b/layouts/partials/head-css.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.css">
+<link rel="stylesheet" href="/css/prism.min.css">
 {{ $scssMain := "scss/main.scss"}}
 {{ if .Site.IsServer }}
 {{/* Note the missing postCSS. This makes it snappier to develop in Chrome, but makes it look sub-optimal in other browsers. */}}
