--- a/layouts/_default/content.html
+++ b/layouts/_default/content.html
@@ -1,6 +1,8 @@
 <div class="td-content">	
 
-	{{ partial "reading-time.html" . }}
+	{{ if (and (not .Params.hide_readingtime) (.Site.Params.ui.readingtime.enable)) }}
+        {{ partial "reading-time.html" . }}
+    {{ end }}
 
 	<h1>{{ .Title }}</h1>
 	{{ with .Params.description }}<div class="lead">{{ . | markdownify }}</div>{{ end }}
