--- a/layouts/jobs/list.html
+++ b/layouts/jobs/list.html
@@ -1,5 +1,9 @@
 {{ define "main" }}
 <div class="td-content">
+	{{ if (and (not .Params.hide_readingtime) (.Site.Params.ui.readingtime.enable)) }}
+        {{ partial "reading-time.html" . }}
+    {{ end }}
+
 	<h1>{{ .Title }}</h1>
 	{{ with .Params.description }}<div class="lead">{{ . | markdownify }}</div>{{ end }}
 	{{ .Content }}
