Sección nueva: widgets + creacion nuevos sites + renombrado todos a index.md (para evitar alargar el slug)

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -20,13 +20,13 @@ $td-enable-google-fonts: true !default;
 $primary: #30638E !default;
 $primary-light: lighten($primary, 75%) !default;
 $secondary: #FFA630 !default;
-$success: #3772FF !default;
+$success: #079011 !default;
 $info: #C0E0DE !default;
-$warning: #ED6A5A !default;
-$danger: #ED6A5A !default;
+$warning: #FFA630 !default;
+$danger: #dc3545 !default;
 $white: #fff !default;
 $light: #D3F3EE !default;
-
+$rosa: #e83e8c !default;
 $dark: #403F4C !default;
 $blue: #72A1E5 !default;
 $orange: #BA5A31 !default;
