--- a/assets/scss/_search.scss
+++ b/assets/scss/_search.scss
@@ -1,7 +1,7 @@
 // Search
 
 .td-search-input {
-    background: transparent;
+    background: $white;
 
     &.form-control:focus {
         border-color: lighten($primary, 60%);
@@ -13,4 +13,9 @@
     }
 
     font-family: "Font Awesome 5 Free", $font-family-base;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: searchfield-cancel-button;
+    cursor: pointer;
 }
