--- a/layouts/shortcodes/alert.html
+++ b/layouts/shortcodes/alert.html
@@ -2,5 +2,5 @@
 {{ $color := .Get "color" | default "primary" }}
 <div class="alert alert-{{ $color }}" role="alert">
 {{ with .Get "title" }}<h4 class="alert-heading">{{ . | safeHTML }}</h4>{{ end }}
-{{ .Inner | markdownify }}
+<p class="content-alert">{{ .Inner | markdownify }}</p>
 </div>
