--- a/static/css/offline-search.css
+++ b/static/css/offline-search.css
@@ -1,12 +1,11 @@
 #search-results{
     position: absolute;
-    width:90%;
-    font-size: 0.8rem;
+    width:100%;
+    font-size: 0.9rem;
     top: 40px;
     padding-left: 5px;
-    padding-right: 5px;
-    left:5%;
-    margin-top: -2px;
+    padding-right: 5px;    
+    margin-top: -5px;
     z-index: 1;
 }
 
@@ -22,7 +21,10 @@
 }
 
 .td-search-input.form-control:focus{
-    box-shadow: 0 0 0 1px #ccc!important;
+    color: #495057;    
+    border-color: $primary;
+    outline: 0;
+    box-shadow: 0 0 0 3px #82afd5;
 }
 
 #search-results ul{
@@ -35,5 +37,7 @@
     border-top:1px solid #ccc;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
     background: #fff;
 }
