nomenclatura + ejemplo widget noticias

--- a/assets/scss/_readingtime.scss
+++ b/assets/scss/_readingtime.scss
@@ -5,4 +5,4 @@
 * License: MIT
 */
 
-p.reading-time { color: $primary; }
+p.reading-time { color: #AD6200; float: right; margin-top: 0.7rem; margin-bottom: 0; margin-right: 1.7rem; }
