navbar-toggler + lighthouse mejoras + offline js search arreglado si input search esta vacio

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,7 +17,7 @@ $td-enable-google-fonts: true !default;
 
 // Theme colors
 
-$primary: #30638E !default;
+$primary: #2C5B81 !default;
 $primary-light: lighten($primary, 75%) !default;
 $secondary: #FFA630 !default;
 $success: #079011 !default;
@@ -41,6 +41,14 @@ $gray-900: #222 !default;
 $black: #000 !default;
 $green: #006808 !default;
 
+//solve audits problem css
+$blue-link: #266CCF !default;
+$active-link-adtopy-menu: #FFC61A !default;
+$no-active-link-adtopy-menu: $white !default;
+$text-muted-adtopy: #757575 !default;
+$footer-color-link: #FFD042 !default;
+$hover-yellow-color-adtopy: #FFEA9E !default;
+
 // variables usadas para bloques de alertas: assets\scss\_alerts.scss (layouts\shortcodes\alert.html)
 $nota: #FFA630 !default;
 $error: #dc3545 !default;
@@ -61,16 +69,19 @@ $td-sidebar-border-color: $border-color !default;
 // These colors are all part of the theme palette, but the mix is fairly random to create variation. This can be overridden by the project if needed.
 $td-box-colors: $dark, $primary, $secondary, $info, $primary-light, $gray-600, $success, $warning, $dark, $danger, $primary, $secondary, $primary-light, $info;
 
-$link-color: darken($blue, 15%) !default;
+//$link-color: darken($blue, 15%) !default;
+$link-color: $blue-link !default;
 $link-decoration: none !default;
-$link-hover-color: darken($link-color, 15%) !default;
+//$link-hover-color: darken($link-color, 15%) !default;
+$link-hover-color: $blue-link !default;
 $link-hover-decoration: none !default;
 
 // Fonts
-
+// Solve this issue for lighthouse: "Ensure text remains visible during webfont load"
+// https://web.dev/font-display/#google-fonts
 $google_font_name: "Open Sans" !default;
 $google_font_family: "Open+Sans:300,300i,400,400i,700,700i" !default;
-$web-font-path: "https://fonts.googleapis.com/css?family=#{$google_font_family}";
+$web-font-path: "https://fonts.googleapis.com/css?family=#{$google_font_family}&display=swap";
 
 $td-fonts-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
