--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -2,6 +2,50 @@
 // Main navbar
 //
 
+// custom button for animation adtopy
+.icon-bar {
+	width: 28px; 
+	height: 3px;
+	background-color: $white;
+    display: block;
+    line-height: 5px;
+	transition: all 0.2s;
+    margin-top: 5px;
+}
+ 
+.navbar-toggler {
+  border: none;
+  background: transparent !important;
+}
+
+.navbar-toggler .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+  }
+  
+  .navbar-toggler .middle-bar {
+    opacity: 0;
+  }
+  
+  .navbar-toggler .bottom-bar {
+    transform: rotate(-48deg);
+    transform-origin: 10% 90%;
+  }
+  
+  .navbar-toggler.collapsed .top-bar {
+    transform: rotate(0);
+  }
+  
+  .navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+  }
+  
+  .navbar-toggler.collapsed .bottom-bar {
+    transform: rotate(0);
+  }
+// fin custom animation button for navbar-toggler
+
+
 .td-navbar-cover {
     background: $primary;
 
@@ -96,3 +140,33 @@
         }
     }
 }
+
+
+.navbar-nav 
+{
+    .nav-link {
+      color: $white !important;
+
+      @include hover-focus {
+        color: $navbar-dark-hover-color;
+      }
+
+      &.disabled {
+        color: $navbar-dark-disabled-color !important;
+      }
+    }
+
+    .show > .nav-link,
+    .active > .nav-link,
+    .nav-link.show,
+    .nav-link.active {
+      color: $active-link-adtopy-menu !important;
+    }
+}
+
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus { color: $hover-yellow-color-adtopy !important; }
+
+.text-muted { color: $text-muted-adtopy !important; }
+
+.color-copyright {color: $footer-color-link; }
+.color-copyright:hover { color: $hover-yellow-color-adtopy; }
