--- a/layouts/partials/head-css.html
+++ b/layouts/partials/head-css.html
@@ -1,14 +1,16 @@
-<link rel="stylesheet" href="/css/prism.min.css">
+<link rel="import" rel="stylesheet" href="/css/prism.min.css" async>
 {{ $scssMain := "scss/main.scss"}}
 {{ if .Site.IsServer }}
 {{/* Note the missing postCSS. This makes it snappier to develop in Chrome, but makes it look sub-optimal in other browsers. */}}
 {{ $css := resources.Get $scssMain | toCSS (dict "enableSourceMap" true) }}
-<link href="{{ $css.RelPermalink }}" rel="stylesheet">
+<link href="{{ $css.RelPermalink }}" as="style" rel="stylesheet" media="all" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="{{ $css.RelPermalink }}"></noscript>
+
 {{ else }}
 {{ $css := resources.Get $scssMain | toCSS (dict "enableSourceMap" false) | postCSS | minify | fingerprint }}
-<link rel="preload" href="{{ $css.RelPermalink }}" as="style">
-<link href="{{ $css.RelPermalink }}" rel="stylesheet" integrity="{{ $css.Data.integrity }}">
+<link rel="preload" href="{{ $css.RelPermalink }}" as="style" media="all">
+<link href="{{ $css.RelPermalink }}" rel="stylesheet" media="all" integrity="{{ $css.Data.integrity }}">
 {{ end }}
 {{ if and (.Site.Params.offlineSearch) (not .Site.Params.gcs_engine_id) }}
-<link href="/css/offline-search.css" rel="stylesheet">
+<link href="/css/offline-search.css" rel="stylesheet" media="all">
 {{ end }}
