--- a/layouts/partials/search-input.html
+++ b/layouts/partials/search-input.html
@@ -2,7 +2,7 @@
 <input type="search" class="form-control td-search-input" placeholder="&#xf002 {{ T "ui_search" }}" aria-label="{{ T "ui_search" }}" autocomplete="off">
 {{ else if .Site.Params.offlineSearch }}
 <div id="search-nav-container">
-<input type="search" id="search-input" autocomplete="off" class="form-control td-search-input" placeholder="&#xf002 {{ T "ui_search" }}" autocomplete="on">
+    <input aria-label="buscar" type="search" id="search-input" autocomplete="off" class="form-control td-search-input" placeholder="&#xf002 {{ T "ui_search" }}" autocomplete="on">
 <div id="search-results" class="container"></div>
 </div>
 {{ end }}
