--- a/layouts/partials/head-css.html
+++ b/layouts/partials/head-css.html
@@ -1,9 +1,9 @@
-<link rel="import" rel="stylesheet" href="/css/prism.min.css" async>
+<link href="/css/prism.min.css" as="style" rel="preload" onload="this.onload=null;this.rel='stylesheet'">
 {{ $scssMain := "scss/main.scss"}}
 {{ if .Site.IsServer }}
 {{/* Note the missing postCSS. This makes it snappier to develop in Chrome, but makes it look sub-optimal in other browsers. */}}
 {{ $css := resources.Get $scssMain | toCSS (dict "enableSourceMap" true) }}
-<link href="{{ $css.RelPermalink }}" as="style" rel="stylesheet" media="all" onload="this.onload=null;this.rel='stylesheet'">
+<link href="{{ $css.RelPermalink }}" as="style" rel="stylesheet" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="{{ $css.RelPermalink }}"></noscript>
 
 {{ else }}
@@ -12,5 +12,5 @@
 <link href="{{ $css.RelPermalink }}" rel="stylesheet" media="all" integrity="{{ $css.Data.integrity }}">
 {{ end }}
 {{ if and (.Site.Params.offlineSearch) (not .Site.Params.gcs_engine_id) }}
-<link href="/css/offline-search.css" rel="stylesheet" media="all">
+<link href="/css/offline-search.css" as="style" rel="preload" onload="this.onload=null;this.rel='stylesheet'">
 {{ end }}
