--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,3 +1,4 @@
+<!-- Hide editrepo and create new issue. Descomentar si se quiere utilizar de nuevo: {{ partial "page-meta-links.html" . }} -->
 {{ partial "page-meta-links.html" . }}
 {{ if not .Params.notoc }}
 {{ with .TableOfContents }}
