--- a/static/css/offline-search.css
+++ b/static/css/offline-search.css
@@ -1,6 +1,7 @@
 #search-results{
     position: absolute;
     width:100%;
+    max-width: 100%;
     font-size: 0.9rem;
     top: 42px;
     padding-left: 5px;
