Creación de Host (Oracle Cloud) + Tabs shortcode

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -55,6 +55,10 @@ $error: #dc3545 !default;
 $info: #30638E !default;
 $exito: #079011 !default;
 
+// variables para tabs
+$tabs-bg: #FAFAFA !default;
+$tabs-border: #A9A7B4 !default;
+
 
 //$code-color: darken($secondary, 20%) !default;
 $code-color: #D22D32 !default;
