--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,6 +27,7 @@
 @import "section-index";
 @import "pageinfo";
 @import "readingtime";
+@import "tabs";
 
 @if $td-enable-google-fonts {
     @import url($web-font-path);
