--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -1,4 +1,4 @@
-<script type="application/javascript">initTabs()</script>
+<script type="application/javascript">initTabs();</script>
 {{ with .Site.Params.algolia_docsearch }}
 <!-- scripts for algolia docsearch -->
 {{ end }}
