--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -40,6 +40,7 @@ $gray-800: #333 !default;
 $gray-900: #222 !default;
 $black: #000 !default;
 $green: #006808 !default;
+$color-toc: #025F0A !default;
 
 //solve audits problem css
 $blue-link: #266CCF !default;
