--- a/layouts/partials/page-meta-lastmod.html
+++ b/layouts/partials/page-meta-lastmod.html
@@ -1,1 +1,2 @@
-{{ T "post_last_mod"}} {{ .Lastmod.Format .Site.Params.time_format_default }}{{ with .GitInfo }}: <a rel="noopener" href="{{ $.Site.Params.github_repo }}/commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }}
+{{ T "post_last_mod"}} {{ .Lastmod.Format .Site.Params.time_format_default }}
+<!-- remove https://github.com/google/docsy/issues/246#issuecomment-616584198 -->
